fix spacing in dashboard cards

--- a/src/themes/default/styles/component.dashboard-card.css
+++ b/src/themes/default/styles/component.dashboard-card.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     height: 535px;
-    padding: calc($unit * 3) calc($unit * 3);
+    padding: calc($unit * 6) calc($unit * 6);
     padding-bottom: calc($unit * 2);
 
     border-radius: $radius-base;
