--- a/src/themes/default/styles/component.header.css
+++ b/src/themes/default/styles/component.header.css
@@ -25,6 +25,10 @@
             display: none;
         }
     }
+    
+    @media (--screen-to-sml) {
+        padding: calc($unit * 3) calc($unit * 1);
+    }
 
     &__logo {
         height: 53px;
